<resources>
    <string name="task_app">Task App</string>
    <string name="action_settings">Settings</string>
    <string name="SummaryTitle">Summary Title</string>
    <string name="TaskToDo">Task To Do</string>
    <string name="TaskDoing">Task Doing</string>
    <string name="TaskDone">Task Done</string>
    <string name="New">New</string>
    <string name="ShowAll">Show All</string>
</resources>
